# datacrumbs

./: .clang-format  .cmake-format  .editorconfig  .gitignore  .shellcheckrc  CMakeLists.txt  README.lead2.md  README.md  README.quokka.md  README.wombat.md  initialize_tool  notes.MD  prog_loader.sh  requirements.txt  run_tool  usdt_collector.c  valgrind.supp
.devcontainer/: devcontainer.json
.github/workflows/: docker-build-test.yml  format-check.yml
analysis/: create_index.sh  requirements.txt  trace_analysis.ipynb
apps/Montage/: setup_montage.sh
cmake/: datacrumbsConfig.cmake.in  datacrumbs_utils_compatibility.cmake  run_system_configurator_if_missing.cmake  write_datacrumbs_utils_compatibility_env.cmake
cmake/configure_files/: datacrumbs_config.h.in
cmake/modules/: datacrumbs-utils.cmake
data/: categories-haridev-lead.json  probes-exclusion-haridev-lead.json  probes-haridev-lead.json
datacrumbs/: main.py
datacrumbs/common/: constants.py  data_structure.py  enumerations.py
datacrumbs/configs/: configuration_manager.py
datacrumbs/configs/module/: ares.yaml  arta_lima.yaml  default.yaml  lead.yaml  lead2.yaml
datacrumbs/data/: category_fn_map.json  io_probes_file.json  user_probes_file.json
datacrumbs/data/arta_lima/: category_fn_map.json  io_probes_file.json  user_probes_file.json
datacrumbs/data/default/: category_fn_map.json  io_probes_file.json  user_probes_file.json
datacrumbs/data/lead2/: category_fn_map.json  io_probes_file.json  user_probes_file.json
datacrumbs/dfbcc/: app_connector.py  collector.py  dfbcc.py  elf.py  header.py  io_probes.py  probes.py  trace_collector.py  trace_header.py  user_probes.py
datacrumbs/elf/: elf.py
datacrumbs/llvm/: functions.py
datacrumbs/writer/: perfetto.py
docs/: build.rst  composability.rst  conf.py  dependencies.rst  deployment.rst  ebpf_background.rst  flux_integration.rst  index.rst  integration.rst  introduction.rst  run.rst  setup.rst  slurm_integration.rst  usage.rst
docs/_static/: custom.css
docs/example/: hdf5-callgraph-example.txt
docs/patch/: bpftime-v0.2.0.patch
etc/datacrumbs/configs/: ares.yaml  corona.yaml  docker-toss.yaml  docker.yaml  ebpf.yaml  hdf.yaml  lead copy.yaml  lead-us.yaml  lead.yaml  project.env.local.in  project.yaml.in  quokka.yaml
etc/datacrumbs/data/: categories-cc-ebpf.json  categories-haridev-corona.json  categories-haridev-lead-us.json  categories-haridev-lead.json  categories-haridev-tuolumne-mpiio.json  compact.sh  manual-probes-haridev-lead-us.json  manual-probes-haridev-lead.json  manual-probes-haridev-tuolumne-mpiio.json  probes-cc-ebpf.json  probes-exclusion-cc-ebpf.json  probes-exclusion-haridev-lead.json  probes-exclusion-haridev-tuolumne-mpiio.json  probes-haridev-corona.json  probes-haridev-lead-us.json  probes-haridev-lead.json  probes-haridev-tuolumne-mpiio.json  probes-invalid-haridev-lead.json
etc/datacrumbs/modulefiles/: module.lua.in
etc/datacrumbs/systemd/: datacrumbs.service.in  datacrumbs@.service.in  datacrumbs_probe_manager.service.in  datacrumbs_sign_probes.service.in
etc/datacrumbs/systems/: README.chameleon.md  README.md
infrastructure/docker/: Dockerfile  Dockerfile.build  build-multiarch.sh  test_run.sh
infrastructure/podman/: README.md  run-bpf-test.sh  run-toss5-container.sh  tracepoint_bpf.c
infrastructure/podman/.bpf-build/: vmlinux.h
infrastructure/qemu/: README.md  expand-disk.sh  provision-ebpf.sh  run-qemu-ebpf.sh  setup-ebpf-vm.sh
infrastrutcure/docker/: Dockerfile  test_run.sh
poc/: uprobes.py
poc/bpf-core/: Makefile  example  example.bpf.c  example.c  example.generic.bpf.c  example.h  example.kprobe.bpf.c  example.skel.h  example.syscall.bpf.c  example.uprobe.bpf.c  example.usdt.bpf.c  vmlinux.h
requirements/: requirement.chameleon.txt  requirement.quokka.txt
scripts/: docker-build.sh  setup_env_client.sh
scripts/ares/client/: setup.sh
scripts/ares/server/: init.sh  initialize_tool  run.sh  run_tool  setup.sh
scripts/arta_lima/server/: init.sh  run.sh  setup.sh
scripts/chameleon/: install_env.sh
scripts/chameleon/client/: setup.sh
scripts/chameleon/server/: init.sh  initialize_tool  run.sh  run_tool  setup.sh
scripts/datacrumbs/: datacrumbs_args.in  datacrumbs_compose.in  datacrumbs_compose_run.in  datacrumbs_compose_run_test.in  datacrumbs_compose_wrapper.in  datacrumbs_create_log_dir.in  datacrumbs_logging.in  datacrumbs_run.in  datacrumbs_run_test.in  datacrumbs_run_validator.in  datacrumbs_salloc.in  datacrumbs_server_run.sh.in  datacrumbs_server_stop.sh.in  datacrumbs_service_common.sh.in  datacrumbs_service_common_slurm.sh.in  datacrumbs_service_run.sh.in  datacrumbs_service_stop.sh.in  datacrumbs_setup  datacrumbs_setup.in  datacrumbs_stop.in  datacrumbs_track.in  datacrumbs_untrack.in  datacrumbs_utility.in  datacrumbs_wrap.in
scripts/formatting/: autoformat.sh  check-formatting.sh
scripts/lead2/client/: setup.sh
scripts/lead2/server/: init.sh  initialize_tool  run.sh  run_tool  setup.sh
scripts/lima/: install_env.sh
scripts/lima/client/: setup.sh
scripts/lima/server/: init.sh  initialize_tool  run.sh  run_tool  setup.sh
scripts/quokka/client/: setup.sh
scripts/quokka/server/: init.sh  initialize_tool  run.sh  run_tool  setup.sh
scripts/wombat/client/: setup.sh
scripts/wombat/server/: init.sh  initialize_tool  run.sh  run_tool  setup.sh
src/datacrumbs/: library.c
src/datacrumbs/client/: library.c  library.cpp
src/datacrumbs/common/: configuration_manager.cpp  configuration_manager.h  data_structures.h  enumerations.h  logging.h  probe_file.h  runtime_configuration_manager.cpp  runtime_configuration_manager.h  singleton.h  typdefs.h  typedefs.h  utils.h
src/datacrumbs/composable/: CMakeLists.txt.in
src/datacrumbs/explorer/: probes.json  (+2 more)
src/datacrumbs/utilities/: CMakeLists.txt
src/datacrumbs/utilities/config/: yaml_query.cpp  yaml_utils.cpp  yaml_utils.h
tests/: test.cpp  test.py
tests/poc/: test.c
tests/scripts/: test_posix.sh
tools/: CMakeLists.txt  aggregate_trace.cpp  analyze_trace.sh  callgraph.cpp  callgraph_vis.cpp  separator.sh
(+78 files in other folders)
